# field-guide-maker

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: build-release.yml
src/fgm/: __init__.py  __main__.py  factory.py  gui.py
