[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "field_guide_maker"
version = "0.1.0"
description = "A tool to create field guides PSDs."
requires-python = ">=3.10"
dependencies = [
    'Pillow>=12.2.0',
    'psd-tools>=1.17.2',
    'streamlit>=1.58.0',
]

[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools.package-data]
"*" = ["*.ttf"]

[tool.hatch.build.targets.wheel]
packages = ["src/fgm"]

[tool.poetry]
package-mode = false